--- a/catual/core/templates/olimpo.html
+++ b/catual/core/templates/olimpo.html
@@ -8,7 +8,6 @@
 
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 <body>
@@ -28,21 +27,20 @@
 <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
-        <h1>Condomínio Atual</h1>
+        <h1>Edifício Olimpo</h1>
       </div>
-      <p class="lead">Utilize métodos eficazes para gerir o seu condomínio. Esta é uma ferramenta que trabalha
-          esclusivamente com a necessidade do síndico e não perde tempo com processos desnecessários.</p>
+      <p class="lead">Se você não é morador deste condomínio, volte à página inicial. Se este é o seu, você deverá
+          solicitar ao síndico que cadastre o seu email. O Condomínio Atual é um sistema seguro que utiliza uma tecnologia de
+      integração com o Google para visualização de documentos sigilosos.</p>
 
 
-        <h2>Acesse seu condomínio</h2>
+        <h3>Regulamentos</h3>
         <hr>
-        <p class="text-muted">Ao acessar o seu condomínio pelo link abaixo, você será direcionado a uma página que contem
-        documentos específicos para você.</p>
-        <a href="/olimpo/"><h4><span class="glyphicon glyphicon-chevron-right"></span> Edifício Olimpo</h4></a>
-
+        <a href="https://drive.google.com/file/d/0B6EoP5kaEOYOTjA1S1NnMTlQV1U/view?usp=sharing"><span class="glyphicon glyphicon-file"></span> Constituição de condomínio</a>
+        <hr>
+        <p>Volte à <a href="../">página inicial</a> ou vá ao menu de navegação</p>
 
     </div>
-
     <footer class="footer">
       <div class="container">
         <p class="text-muted">Marcus Gabaldo - 2015</p>
