--- a/catual/core/templates/index.html
+++ b/catual/core/templates/index.html
@@ -31,7 +31,7 @@
         <h1>Condomínio Atual</h1>
       </div>
       <p class="lead">Utilize métodos eficazes para gerir o seu condomínio. Esta é uma ferramenta que trabalha
-          esclusivamente com a necessidade do síndico e não perde tempo com processos desnecessários.</p>
+          exclusivamente com a necessidade do síndico e não perde tempo com processos desnecessários.</p>
 
 
         <h2>Acesse seu condomínio</h2>
