--- a/catual/core/templates/olimpo.html
+++ b/catual/core/templates/olimpo.html
@@ -29,9 +29,9 @@
       <div class="page-header">
         <h1>Edifício Olimpo</h1>
       </div>
-      <p class="lead">Se você não é morador deste condomínio, volte à página inicial. Se este é o seu, você deverá
-          solicitar ao síndico que cadastre o seu email. O Condomínio Atual é um sistema seguro que utiliza uma tecnologia de
-      integração com o Google para visualização de documentos sigilosos.</p>
+      <p class="lead">Se você não é morador deste condomínio, volte à página inicial. Se é o seu e ainda
+          não tem acesso, deverá solicitar ao síndico o cadastro do seu email. O Condomínio Atual é um sistema seguro que
+          utiliza tecnologias de integração com o Google para visualização de documentos restritos.</p>
 
 
         <h3>Regulamentos</h3>
