--- a/catual/core/templates/olimpo.html
+++ b/catual/core/templates/olimpo.html
@@ -32,18 +32,36 @@
       <p class="lead">Se você não é morador deste condomínio, volte à página inicial. Se é o seu e ainda
           não tem acesso, deverá solicitar ao síndico o cadastro do seu email. O Condomínio Atual é um sistema seguro que
           utiliza tecnologias de integração com o Google para visualização de documentos restritos.</p>
+        <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+               <h2>Arquivos</h2>
+                <hr>
+                <h3>Regulamentos</h3>
+                <a href="https://drive.google.com/file/d/0B6EoP5kaEOYOTjA1S1NnMTlQV1U/view?usp=sharing"><span class="glyphicon glyphicon-file"></span> Constituição de condomínio</a>
+                <br><br>
+                <a href="https://drive.google.com/open?id=0B6EoP5kaEOYORDNhSV9jTDlJZnc"><span class="glyphicon glyphicon-file"></span> Novo regulamento interno</a>
+                <hr>
+                <h3>Orientaçõess</h3>
+                <a href="https://drive.google.com/open?id=0B6EoP5kaEOYOYzBZZDlmVGFmUFU"><span class="glyphicon glyphicon-education"></span> Barulho no condomínio</a>
+                <hr>
+            </div>
+            <div class="col-md-6">
+                <h2>Registro de ocorrências</h2>
+                <hr>
+                <a href="https://docs.google.com/forms/d/1e_fXx0AR_U2KGstuHDysnIql4fhmFsXujnJOw1lwA2Q/viewform"><span class="glyphicon glyphicon-edit"></span> Formulário</a
+            </div>
+        </div>
+        </div>
 
 
-        <h3>Regulamentos</h3>
-        <hr>
-        <a href="https://drive.google.com/file/d/0B6EoP5kaEOYOTjA1S1NnMTlQV1U/view?usp=sharing"><span class="glyphicon glyphicon-file"></span> Constituição de condomínio</a>
         <hr>
         <p>Volte à <a href="../">página inicial</a> ou vá ao menu de navegação</p>
 
     </div>
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">Marcus Gabaldo - 2015</p>
+        <p class="text-muted">Marcus Gabaldo - 2016</p>
       </div>
     </footer>
 
