--- a/catual/core/templates/olimpo.html
+++ b/catual/core/templates/olimpo.html
@@ -42,7 +42,7 @@
                 <br><br>
                 <a href="https://drive.google.com/open?id=0B6EoP5kaEOYORDNhSV9jTDlJZnc"><span class="glyphicon glyphicon-file"></span> Novo regulamento interno</a>
                 <hr>
-                <h3>Orientaçõess</h3>
+                <h3>Orientações</h3>
                 <a href="https://drive.google.com/open?id=0B6EoP5kaEOYOYzBZZDlmVGFmUFU"><span class="glyphicon glyphicon-education"></span> Barulho no condomínio</a>
                 <hr>
             </div>
