--- a/catual/core/templates/index.html
+++ b/catual/core/templates/index.html
@@ -1,56 +1,20 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Condomínio Atual</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'base.html' %}
 
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-</head>
-<body>
-
-<!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <!--  -->
-        <div id="navbar">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-          </ul>
-        </div><!--/. -->
-      </div>
-    </nav>
+{% block content %}
 
 <!-- Begin page content -->
-    <div class="container">
-      <div class="page-header">
+<div class="container">
+    <div class="page-header">
         <h1>Condomínio Atual</h1>
-      </div>
-      <p class="lead">Utilize métodos eficazes para gerir o seu condomínio. Esta é uma ferramenta que trabalha
-          exclusivamente com a necessidade do síndico e não perde tempo com processos desnecessários.</p>
-
-
-        <h2>Acesse seu condomínio</h2>
-        <hr>
-        <p class="text-muted">Ao acessar o seu condomínio pelo link abaixo, você será direcionado a uma página que contem
-        documentos específicos para você.</p>
-        <a href="/olimpo/"><h4><span class="glyphicon glyphicon-chevron-right"></span> Edifício Olimpo</h4></a>
-
-
     </div>
 
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">Marcus Gabaldo - 2016</p>
-      </div>
-    </footer>
+    <p class="lead">Utilize métodos eficazes para gerir o seu condomínio. Esta é uma ferramenta que
+        trabalha exclusivamente com a necessidade do síndico e não perde tempo com processos desnecessários.</p>
+    <h2>Acesse seu condomínio</h2>
+    <hr>
+    <p class="text-muted">Ao acessar o seu condomínio pelo link abaixo, você será direcionado a uma página que contem
+        documentos específicos para você.</p>
+    <a href="/olimpo/"><h4><span class="glyphicon glyphicon-chevron-right"></span> Edifício Olimpo</h4></a>
+</div>
 
-    <!-- jQuery (necessario para os plugins Javascript Bootstrap) -->
-    <script src="{% static 'js/jquery-2.2.0.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-</body>
-</html>
+{% endblock content %}
