--- a/catual/core/templates/index.html
+++ b/catual/core/templates/index.html
@@ -1,20 +1,52 @@
-{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Condomínio Atual{% endblock title %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{% block content %}
+    <!-- Bootstrap -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+</head>
+<body>
+
+<!-- Fixed navbar -->
+<div
+
+
 
 <!-- Begin page content -->
 <div class="container">
+
     <div class="page-header">
         <h1>Condomínio Atual</h1>
     </div>
 
-    <p class="lead">Utilize métodos eficazes para gerir o seu condomínio. Esta é uma ferramenta que
-        trabalha exclusivamente com a necessidade do síndico e não perde tempo com processos desnecessários.</p>
+    <div class="jumbotron">
+    <p>Utilize métodos eficazes para gerir o seu condomínio. Esta é uma ferramenta que
+            trabalha exclusivamente com a necessidade do síndico e não perde tempo com processos
+            desnecessários.</p>
+    </div>
+
+
     <h2>Acesse seu condomínio</h2>
-    <hr>
     <p class="text-muted">Ao acessar o seu condomínio pelo link abaixo, você será direcionado a uma página que contem
         documentos específicos para você.</p>
-    <a href="/olimpo/"><h4><span class="glyphicon glyphicon-chevron-right"></span> Edifício Olimpo</h4></a>
+    <hr>
+    <div class="condominios">
+        <img src="{% static 'img/olimpo-307.jpg' %}" alt="Edifício Olimpo" class="img-circle">
+        <a href="/olimpo/"><h3>Edifício Olimpo</h3></a>
+    </div>
+
 </div>
 
-{% endblock content %}
+
+<!-- jQuery (necessario para os plugins Javascript Bootstrap) -->
+<script src="{% static 'js/jquery-2.2.0.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+</body>
+</html>
