--- a/catual/core/templates/olimpo.html
+++ b/catual/core/templates/olimpo.html
@@ -3,34 +3,56 @@
 {% block title %}Edifício Olimpo{% endblock title %}
 
 {% block content %}
-<div class="container">
-    <div class="page-header">
-        <h1>Edifício Olimpo</h1>
-    </div>
-    <p class="lead">Se você não é morador deste condomínio, volte à página inicial. Se é o seu e ainda
-    não tem acesso, deverá solicitar ao síndico o cadastro do seu email. O Condomínio Atual é um sistema seguro que
-    utiliza tecnologias de integração com o Google para visualização de documentos restritos.</p>
     <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>Arquivos</h2>
-                <hr>
-                <h3>Regulamentos</h3>
-                <a href="https://drive.google.com/file/d/0B6EoP5kaEOYOTjA1S1NnMTlQV1U/view?usp=sharing"><span class="glyphicon glyphicon-file"></span> Constituição de condomínio</a>
-                <br><br>
-                <a href="https://drive.google.com/open?id=0B6EoP5kaEOYORDNhSV9jTDlJZnc"><span class="glyphicon glyphicon-file"></span> Novo regulamento interno</a>
-                <hr>
-                <h3>Orientações</h3>
-                <a href="https://drive.google.com/open?id=0B6EoP5kaEOYOYzBZZDlmVGFmUFU"><span class="glyphicon glyphicon-education"></span> Barulho no condomínio</a>
-                <hr>
-            </div>
-                <div class="col-md-6">
-                <h2>Registro de ocorrências</h2>
-                <hr>
-                <a href="https://docs.google.com/forms/d/1e_fXx0AR_U2KGstuHDysnIql4fhmFsXujnJOw1lwA2Q/viewform"><span class="glyphicon glyphicon-edit"></span> Formulário</a
-            </div>
+
+    <!-- Static navbar -->
+    <nav class="navbar navbar-default">
+    <div class="container-fluid">
+    <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <span class="sr-only">Toggle navigation</span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">Condomínio Atual</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+    <ul class="nav navbar-nav navbar-right">
+    <li><a href="/">Início</a></li>
+    </ul>
+    </div><!--/.nav-collapse -->
+    </div><!--/.container-fluid -->
+    </nav>
+
+    <h1>Edifício Olimpo</h1>
+    <hr>
+    <p class="lead">Se você não é morador deste condomínio, volte à página inicial. Se é o seu e ainda
+        não tem acesso, deverá solicitar ao síndico o cadastro do seu email. O Condomínio Atual é um sistema seguro que
+        utiliza tecnologias de integração com o Google para visualização de documentos restritos.</p>
+
+    <a class="btn btn-warning" href="/ocorrencias/" role="button">Registrar Ocorrências</a>
+    <hr>
+    <h2>Documentos Importantes</h2>
+    <hr>
+    <div class="row">
+        <div class="col-md-3">
+            <h3><span class="glyphicon glyphicon-file"></span> Regulamentos</h3>
+            <ul>
+                <li><a href="https://drive.google.com/file/d/0B6EoP5kaEOYOTjA1S1NnMTlQV1U/view?usp=sharing">Constituição de condomínio</a></li>
+                <li><a href="https://drive.google.com/open?id=0B6EoP5kaEOYORDNhSV9jTDlJZnc">Novo regulamento interno</a></li>
+            </ul>
+            <hr>
+        </div>
+        <div class="col-md-3">
+            <h3><span class="glyphicon glyphicon-education"></span> Orientações</h3>
+            <ul>
+                <li><a href="https://drive.google.com/open?id=0B6EoP5kaEOYOYzBZZDlmVGFmUFU">Barulho no condomínio</a></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+
         </div>
     </div>
-    <p>Volte à <a href="../">página inicial</a> ou vá ao menu de navegação</p>
 </div>
 {% endblock content %}
