--- a/catual/core/templates/olimpo.html
+++ b/catual/core/templates/olimpo.html
@@ -34,15 +34,16 @@
     <a class="btn btn-warning" href="/ocorrencias/" role="button">Registrar Ocorrências</a>
     <hr>
     <h2>Documentos Importantes</h2>
-    <hr>
     <div class="row">
+        <div class="col-md-3">
+            <h3><span class="glyphicon glyphicon-blackboard"></span> Mural de avisos</h3>
+        </div>
         <div class="col-md-3">
             <h3><span class="glyphicon glyphicon-file"></span> Regulamentos</h3>
             <ul>
                 <li><a href="https://drive.google.com/file/d/0B6EoP5kaEOYOTjA1S1NnMTlQV1U/view?usp=sharing">Constituição de condomínio</a></li>
                 <li><a href="https://drive.google.com/open?id=0B6EoP5kaEOYORDNhSV9jTDlJZnc">Novo regulamento interno</a></li>
             </ul>
-            <hr>
         </div>
         <div class="col-md-3">
             <h3><span class="glyphicon glyphicon-education"></span> Orientações</h3>
@@ -51,8 +52,15 @@
             </ul>
         </div>
         <div class="col-md-3">
-
+            <h3><span class="glyphicon glyphicon-list-alt"></span> Relatórios</h3>
         </div>
     </div>
+        <hr>
+        <h2>Agenda de eventos</h2>
+        <br>
+        <div class="agenda">
+        <iframe src="https://calendar.google.com/calendar/embed?src=olimpo350%40gmail.com&ctz=America/Sao_Paulo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        </div>
+
 </div>
 {% endblock content %}
