--- a/catual/core/templates/olimpo.html
+++ b/catual/core/templates/olimpo.html
@@ -60,6 +60,8 @@
         <br>
         <div class="agenda">
         <iframe src="https://calendar.google.com/calendar/embed?src=olimpo350%40gmail.com&ctz=America/Sao_Paulo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <br>
+            <a class="btn btn-warning" href="/eventos/" role="button">Agendar evento</a>
         </div>
 
 </div>
