--- a/catual/olimpo/templates/olimpo/eventos.html
+++ b/catual/olimpo/templates/olimpo/eventos.html
@@ -35,55 +35,22 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
+                    <li class=""><a href="{% url 'olimpo:painel' %}">Painel</a></li>
+                    <li class=""><a href="{% url 'olimpo:ocorrencias' %}">Ocorrências</a></li>
+                    <li class="active"><a href="{% url 'olimpo:eventos' %}">Eventos</a></li>
                     <li class=""><a href="{% url 'olimpo:logout' %}">Sair</a></li>
-                    {% endif %}
                 </ul>
             </div>
         </div>
     </div>
     <!-- Fim da Barra de Navegação -->
 
-    <!-- Início do container principal-->
-    <div class="container">
-        <div class="jumbotron text-center">
-            <h1>Condomínio Atual</h1>
-            <p>Utilize métodos eficazes para gerir o seu condomínio. Esta é uma ferramenta que
-                trabalha exclusivamente com a necessidade do síndico e não perde tempo com processos
-                desnecessários.</p>
-        </div>
 
-        <h2>Acesse seu condomínio</h2>
-        <p class="text-muted">Ao acessar o seu condomínio pelo link abaixo, você será direcionado a uma página que contem
-        documentos específicos para você.</p>
-        <hr />
-        <div class="row">
-            <div class="col-md-4">
-                <a href="{% url 'olimpo:painel' %}" class="thumbnail">
-                    <img src="{% static 'img/olimpo-350.jpg' %}" alt="Edifício Olimpo">
-                </a>
-                <h3>Edifício Olimpo</h3>
-                <p>Curitiba/PR</p>
-                <a href="{% url 'olimpo:painel' %}" class="btn btn-info">Acessar Condomínio</a>
-            </div>
-            <div class="col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="{% static 'img/modelo.jpg' %}" alt="Edifício Modelo">
-                </a>
-                <h3>Edifício Modelo</h3>
-                <p>Curitiba/PR</p>
-                <a href="#" class="btn btn-info">Acessar Condomínio</a>
-            </div>
-            <div class="col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="{% static 'img/modelo.jpg' %}" alt="Edifício Modelo">
-                </a>
-                <h3>Edifício Modelo</h3>
-                <p>Curitiba/PR</p>
-                <a href="#" class="btn btn-info">Acessar Condomínio</a>
-            </div>
-        </div>
-
+<div class="container">
+    <div class="formulario">
+        <iframe src="https://docs.google.com/forms/d/12Jw2Ugf8AjSR2QuhS-_UF906atKAVrkCLQc1JObUL6M/viewform?embedded=true"
+        width="920" height="1080" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    </div>
     <hr>
 
     <footer>
