--- a/catual/olimpo/templates/olimpo/painel.html
+++ b/catual/olimpo/templates/olimpo/painel.html
@@ -35,62 +35,59 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
+                    <li class="active"><a href="{% url 'olimpo:painel' %}">Painel</a></li>
+                    <li class=""><a href="{% url 'olimpo:ocorrencias' %}">Ocorrências</a></li>
+                    <li class=""><a href="{% url 'olimpo:eventos' %}">Eventos</a></li>
                     <li class=""><a href="{% url 'olimpo:logout' %}">Sair</a></li>
-                    {% endif %}
                 </ul>
             </div>
         </div>
     </div>
     <!-- Fim da Barra de Navegação -->
 
-    <!-- Início do container principal-->
     <div class="container">
-        <div class="jumbotron text-center">
-            <h1>Condomínio Atual</h1>
-            <p>Utilize métodos eficazes para gerir o seu condomínio. Esta é uma ferramenta que
-                trabalha exclusivamente com a necessidade do síndico e não perde tempo com processos
-                desnecessários.</p>
-        </div>
-
-        <h2>Acesse seu condomínio</h2>
-        <p class="text-muted">Ao acessar o seu condomínio pelo link abaixo, você será direcionado a uma página que contem
-        documentos específicos para você.</p>
-        <hr />
+        <h1>Edifício Olimpo</h1>
+        <hr/>
+        <h2>Avisos</h2>
+        <p class="bg-warning">Informamos que o síndico estará disponível para atendimento aos condôminos todas as
+            quartas-feiras, às 19h00.</p>
+        <p class="bg-danger">Informamos que todos os boletos para o pagamento da taxa de condomínio foram colocadas
+            nas suas respectivas caixas de correio.</p>
+        <hr/>
+        <h2>Documentos Importantes</h2>
         <div class="row">
             <div class="col-md-4">
-                <a href="{% url 'olimpo:painel' %}" class="thumbnail">
-                    <img src="{% static 'img/olimpo-350.jpg' %}" alt="Edifício Olimpo">
-                </a>
-                <h3>Edifício Olimpo</h3>
-                <p>Curitiba/PR</p>
-                <a href="{% url 'olimpo:painel' %}" class="btn btn-info">Acessar Condomínio</a>
+                <h3><span class="glyphicon glyphicon-file"></span> Regulamentos</h3>
+                <ul>
+                <li><a href="https://drive.google.com/file/d/0B6EoP5kaEOYOTjA1S1NnMTlQV1U/view?usp=sharing">Constituição de condomínio</a></li>
+                </ul>
             </div>
-            <div class="col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="{% static 'img/modelo.jpg' %}" alt="Edifício Modelo">
-                </a>
-                <h3>Edifício Modelo</h3>
-                <p>Curitiba/PR</p>
-                <a href="#" class="btn btn-info">Acessar Condomínio</a>
+                <div class="col-md-4">
+                <h3><span class="glyphicon glyphicon-education"></span> Orientações</h3>
+                <ul>
+                <li><a href="https://drive.google.com/open?id=0B6EoP5kaEOYOYzBZZDlmVGFmUFU">Barulho no condomínio</a></li>
+                </ul>
             </div>
-            <div class="col-md-4">
-                <a href="#" class="thumbnail">
-                    <img src="{% static 'img/modelo.jpg' %}" alt="Edifício Modelo">
-                </a>
-                <h3>Edifício Modelo</h3>
-                <p>Curitiba/PR</p>
-                <a href="#" class="btn btn-info">Acessar Condomínio</a>
+                <div class="col-md-4">
+                <h3><span class="glyphicon glyphicon-list-alt"></span> Relatórios</h3>
+                </div>
             </div>
+        <hr>
+        <h2>Agenda de eventos</h2>
+        <br>
+        <div class="agenda">
+            <iframe src="https://calendar.google.com/calendar/embed?src=olimpo350%40gmail.com&ctz=America/Sao_Paulo"
+                    style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
 
-    <hr>
+        <hr>
 
-    <footer>
-        <p>&copy; 2016 - Marcus Gabaldo.</p>
-    </footer>
+        <footer>
+            <p>&copy; 2016 - Marcus Gabaldo.</p>
+        </footer>
 
-</div> <!-- Fim do container principal-->
+    </div> <!-- Fim do container principal-->
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
