--- a/catual/core/templates/index.html
+++ b/catual/core/templates/index.html
@@ -56,35 +56,36 @@
         <h2>Acesse seu condomínio</h2>
         <p class="text-muted">Ao acessar o seu condomínio pelo link abaixo, você será direcionado a uma página que contem
         documentos específicos para você.</p>
-        <hr />
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <a href="{% url 'olimpo:painel' %}" class="thumbnail">
                     <img src="{% static 'img/olimpo-350.jpg' %}" alt="Edifício Olimpo">
                 </a>
                 <h3>Edifício Olimpo</h3>
                 <p>Curitiba/PR</p>
                 <a href="{% url 'olimpo:painel' %}" class="btn btn-info">Acessar Condomínio</a>
+                <br/>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <a href="#" class="thumbnail">
-                    <img src="{% static 'img/modelo.jpg' %}" alt="Edifício Modelo">
+                    <img src="http://placehold.it/300x300" alt="Edifício Modelo">
                 </a>
-                <h3>Edifício Modelo</h3>
-                <p>Curitiba/PR</p>
+                <h3>Seu Condomínio</h3>
+                <p>Seu Município</p>
                 <a href="#" class="btn btn-info">Acessar Condomínio</a>
+                <br/>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <a href="#" class="thumbnail">
-                    <img src="{% static 'img/modelo.jpg' %}" alt="Edifício Modelo">
+                    <img src="http://placehold.it/300x300" alt="Edifício Modelo">
                 </a>
-                <h3>Edifício Modelo</h3>
-                <p>Curitiba/PR</p>
+                <h3>Seu Condomínio</h3>
+                <p>Seu Município</p>
                 <a href="#" class="btn btn-info">Acessar Condomínio</a>
+                <br/>
             </div>
         </div>
-
-    <hr>
+    <hr/>
 
     <footer>
         <p>&copy; 2016 - Marcus Gabaldo.</p>
