--- a/catual/olimpo/templates/olimpo/painel.html
+++ b/catual/olimpo/templates/olimpo/painel.html
@@ -49,10 +49,14 @@
         <h1>Edifício Olimpo</h1>
         <hr/>
         <h2>Avisos</h2>
-        <p class="bg-warning">Informamos que o síndico estará disponível para atendimento aos condôminos todas as
-            quartas-feiras, às 19h00.</p>
-        <p class="bg-danger">Informamos que todos os boletos para o pagamento da taxa de condomínio foram colocadas
-            nas suas respectivas caixas de correio.</p>
+        <div class="alert alert-warning">
+            Prezados condôminos, o síndico estará disponível para atendimento aos condôminos todas as
+            quartas-feiras, às 19h00.
+        </div>
+        <div class="alert alert-danger">
+            Prezados condôminos, os boletos para o pagamento da taxa de condomínio foram colocadas
+            nas suas respectivas caixas de correio.
+        </div>
         <hr/>
         <h2>Documentos Importantes</h2>
         <div class="row">
