--- a/catual/core/static/css/custom.css
+++ b/catual/core/static/css/custom.css
@@ -8,12 +8,13 @@ body {
   padding-bottom: 100px;
 }
 
-.bs-example {
-  margin:30px;
+.jumbotron {
+  background-color: #337ab7;
+  color: #FFFFFF;
 }
 
-p {
-  padding:10px;
+.thumbnail {
+  margin-top: 15px;
 }
 
 .thumbnail img:hover {
@@ -29,27 +30,16 @@ p {
   overflow: hidden;
 }
 
-.form-signin {
-  max-width: 261px;
-  padding: 19px 29px 29px;
-  margin: 0 auto 20px;
-  background-color: #fff;
-  border: 1px solid #e5e5e5;
-  -webkit-border-radius: 5px;
-     -moz-border-radius: 5px;
-          border-radius: 5px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-          box-shadow: 0 1px 2px rgba(0,0,0,.05);
+.panel {
+  width: 300px;
+  margin: auto;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
-}
+
 .form-signin input[type="text"],
 .form-signin input[type="password"] {
   font-size: 16px;
   height: auto;
+  width: 100%;
   margin-bottom: 15px;
   padding: 7px 9px;
 }
