--- a/catual/core/templates/index.html
+++ b/catual/core/templates/index.html
@@ -25,12 +25,14 @@
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
+                {% if user.is_authenticated %}
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                {% endif %}
                 <a class="navbar-brand" href="{% url 'home' %}">Condomínio Atual</a>
             </div>
             <div class="navbar-collapse collapse">
@@ -56,33 +58,44 @@
         <h2>Acesse seu condomínio</h2>
         <p class="text-muted">Ao acessar o seu condomínio pelo link abaixo, você será direcionado a uma página que contem
         documentos específicos para você.</p>
-        <div class="row">
-            <div class="col-md-4 col-sm-4">
-                <a href="{% url 'olimpo:painel' %}" class="thumbnail">
-                    <img src="{% static 'img/olimpo-350.jpg' %}" alt="Edifício Olimpo">
-                </a>
-                <h3>Edifício Olimpo</h3>
-                <p>Curitiba/PR</p>
-                <a href="{% url 'olimpo:painel' %}" class="btn btn-info">Acessar Condomínio</a>
-                <br/>
-            </div>
-            <div class="col-md-4 col-sm-4">
-                <a href="#" class="thumbnail">
-                    <img src="http://placehold.it/300x300" alt="Edifício Modelo">
-                </a>
-                <h3>Seu Condomínio</h3>
-                <p>Seu Município</p>
-                <a href="#" class="btn btn-info">Acessar Condomínio</a>
-                <br/>
-            </div>
-            <div class="col-md-4 col-sm-4">
-                <a href="#" class="thumbnail">
-                    <img src="http://placehold.it/300x300" alt="Edifício Modelo">
-                </a>
-                <h3>Seu Condomínio</h3>
-                <p>Seu Município</p>
-                <a href="#" class="btn btn-info">Acessar Condomínio</a>
-                <br/>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                    <a href="{% url 'olimpo:painel' %}" class="thumbnail">
+                        <img src="{% static 'img/olimpo-350.jpg' %}" alt="Edifício Olimpo">
+                    </a>
+                    <h3>Edifício Olimpo</h3>
+                    <p>Curitiba/PR</p>
+                    <a href="{% url 'olimpo:painel' %}" class="btn btn-info">Acessar Condomínio</a>
+                    <br/>
+                </div>
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                        <img src="http://placehold.it/300x300" alt="Edifício Modelo">
+                    </a>
+                    <h3>Seu Condomínio</h3>
+                    <p>Seu Município</p>
+                    <a href="#" class="btn btn-info">Acessar Condomínio</a>
+                    <br/>
+                </div>
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                        <img src="http://placehold.it/300x300" alt="Edifício Modelo">
+                    </a>
+                    <h3>Seu Condomínio</h3>
+                    <p>Seu Município</p>
+                    <a href="#" class="btn btn-info">Acessar Condomínio</a>
+                    <br/>
+                </div>
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                    <a href="#" class="thumbnail">
+                        <img src="http://placehold.it/300x300" alt="Edifício Modelo">
+                    </a>
+                    <h3>Seu Condomínio</h3>
+                    <p>Seu Município</p>
+                    <a href="#" class="btn btn-info">Acessar Condomínio</a>
+                    <br/>
+                </div>
             </div>
         </div>
     <hr/>
