--- a/catual/olimpo/templates/olimpo/login.html
+++ b/catual/olimpo/templates/olimpo/login.html
@@ -25,12 +25,14 @@
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
+                {% if user.is_authenticated %}
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                {% endif %}
                 <a class="navbar-brand" href="{% url 'home' %}">Condomínio Atual</a>
             </div>
             <div class="navbar-collapse collapse">
