--- a/catual/olimpo/templates/olimpo/eventos.html
+++ b/catual/olimpo/templates/olimpo/eventos.html
@@ -48,8 +48,8 @@
 
 <div class="container">
     <div class="formulario">
-        <iframe src="https://docs.google.com/forms/d/12Jw2Ugf8AjSR2QuhS-_UF906atKAVrkCLQc1JObUL6M/viewform?embedded=true"
-        width="920" height="1080" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <iframe src="https://docs.google.com/forms/d/12Jw2Ugf8AjSR2QuhS-_UF906atKAVrkCLQc1JObUL6M/viewform?usp=send_form?embedded=true"
+        width="100%" height="950" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
     <hr>
 
