--- a/catual/olimpo/templates/olimpo/ocorrencias.html
+++ b/catual/olimpo/templates/olimpo/ocorrencias.html
@@ -49,7 +49,7 @@
 <div class="container">
     <div class="formulario">
         <iframe src="https://docs.google.com/forms/d/1e_fXx0AR_U2KGstuHDysnIql4fhmFsXujnJOw1lwA2Q/viewform?embedded=true"
-        width="920" height="1080" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        width="100%" height="820" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
     <hr>
 
