--- a/catual/olimpo/templates/olimpo/painel.html
+++ b/catual/olimpo/templates/olimpo/painel.html
@@ -79,9 +79,11 @@
         <hr>
         <h2>Agenda de eventos</h2>
         <br>
+        <div class="container-fluid">
         <div class="agenda">
             <iframe src="https://calendar.google.com/calendar/embed?src=olimpo350%40gmail.com&ctz=America/Sao_Paulo"
-                    style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                    width="100%" height="400px" frameborder="0" scrolling="no"></iframe>
+        </div>
         </div>
 
         <hr>
