--- a/catual/core/templates/index.html
+++ b/catual/core/templates/index.html
@@ -21,95 +21,100 @@
     </head>
     <body>
 
-    <!-- Início da Barra de Navegação -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                {% if user.is_authenticated %}
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                {% endif %}
-                <a class="navbar-brand" href="{% url 'home' %}">Condomínio Atual</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
+        <!-- Início da Barra de Navegação -->
+        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
                     {% if user.is_authenticated %}
-                    <li class=""><a href="{% url 'olimpo:logout' %}">Sair</a></li>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     {% endif %}
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- Fim da Barra de Navegação -->
-
-    <!-- Início do container principal-->
-    <div class="container">
-        <div class="jumbotron text-center">
-            <h1>Condomínio Atual</h1>
-            <p>Utilize métodos eficazes para gerir o seu condomínio. Esta é uma ferramenta que
-                trabalha exclusivamente com a necessidade do síndico e não perde tempo com processos
-                desnecessários.</p>
-        </div>
-
-        <h2>Acesse seu condomínio</h2>
-        <p class="text-muted">Ao acessar o seu condomínio pelo link abaixo, você será direcionado a uma página que contem
-        documentos específicos para você.</p>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-3 col-sm-4 col-xs-6">
-                    <a href="{% url 'olimpo:painel' %}" class="thumbnail">
-                        <img src="{% static 'img/olimpo-350.jpg' %}" alt="Edifício Olimpo">
-                    </a>
-                    <h3>Edifício Olimpo</h3>
-                    <p>Curitiba/PR</p>
-                    <a href="{% url 'olimpo:painel' %}" class="btn btn-info">Acessar Condomínio</a>
-                    <br/>
+                    <a class="navbar-brand" href="{% url 'home' %}">Condomínio Atual</a>
                 </div>
-                <div class="col-md-3 col-sm-4 col-xs-6">
-                    <a href="#" class="thumbnail">
-                        <img src="http://placehold.it/300x300" alt="Edifício Modelo">
-                    </a>
-                    <h3>Seu Condomínio</h3>
-                    <p>Seu Município</p>
-                    <a href="#" class="btn btn-info">Acessar Condomínio</a>
-                    <br/>
-                </div>
-                <div class="col-md-3 col-sm-4 col-xs-6">
-                    <a href="#" class="thumbnail">
-                        <img src="http://placehold.it/300x300" alt="Edifício Modelo">
-                    </a>
-                    <h3>Seu Condomínio</h3>
-                    <p>Seu Município</p>
-                    <a href="#" class="btn btn-info">Acessar Condomínio</a>
-                    <br/>
-                </div>
-                <div class="col-md-3 col-sm-4 col-xs-6">
-                    <a href="#" class="thumbnail">
-                        <img src="http://placehold.it/300x300" alt="Edifício Modelo">
-                    </a>
-                    <h3>Seu Condomínio</h3>
-                    <p>Seu Município</p>
-                    <a href="#" class="btn btn-info">Acessar Condomínio</a>
-                    <br/>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if user.is_authenticated %}
+                        <li class=""><a href="{% url 'olimpo:logout' %}">Sair</a></li>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
         </div>
-    <hr/>
+        <!-- Fim da Barra de Navegação -->
 
-    <footer>
-        <p>&copy; 2016 - Marcus Gabaldo.</p>
-    </footer>
+        <!-- Início do container principal-->
+        <div class="container">
+            <div class="jumbotron text-center">
+                <h1>Condomínio Atual</h1>
+                <p>Utilize métodos eficazes para gerir o seu condomínio. O Condomínio Atual é uma ferramenta que
+                    trabalha exclusivamente com a necessidade do síndico e não perde tempo com processos
+                    desnecessários.</p>
+            </div>
 
-</div> <!-- Fim do container principal-->
+            <h2>Acesse seu condomínio</h2>
+            <p class="text-muted">Ao acessar o seu condomínio,, você será direcionado a uma página que contem
+            documentos específicos para você.</p>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="{% url 'olimpo:painel' %}" class="thumbnail">
+                            <img src="{% static 'img/olimpo-350.jpg' %}" alt="Edifício Olimpo">
+                        </a>
+                        <h3>Edifício Olimpo</h3>
+                        <p>Curitiba/PR</p>
+                        <a href="{% url 'olimpo:painel' %}" class="btn btn-info">Entrar</a>
+                        <br/>
+                    </div>
+                    <div class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="#" class="thumbnail">
+                            <img src="http://placehold.it/300x300" alt="Edifício Modelo">
+                        </a>
+                        <h3>Seu Condomínio</h3>
+                        <p>Seu Município</p>
+                        <a href="#" class="btn btn-info">Entrar</a>
+                        <br/>
+                    </div>
+                    <div class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="#" class="thumbnail">
+                            <img src="http://placehold.it/300x300" alt="Edifício Modelo">
+                        </a>
+                        <h3>Seu Condomínio</h3>
+                        <p>Seu Município</p>
+                        <a href="#" class="btn btn-info">Entrar</a>
+                        <br/>
+                    </div>
+                    <div class="col-md-3 col-sm-4 col-xs-6">
+                        <a href="#" class="thumbnail">
+                            <img src="http://placehold.it/300x300" alt="Edifício Modelo">
+                        </a>
+                        <h3>Seu Condomínio</h3>
+                        <p>Seu Município</p>
+                        <a href="#" class="btn btn-info">Entrar</a>
+                        <br/>
+                    </div>
+                </div>
+            </div>
+            <hr/>
+        </div><!-- Fim do container principal-->
+
+        <footer>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>&copy; 2016 - Condomínio Atual.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    </body>
 </html>
