--- a/catual/olimpo/templates/olimpo/login_olimpo_form.html
+++ b/catual/olimpo/templates/olimpo/login_olimpo_form.html
@@ -25,20 +25,21 @@
         <div class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
+                    {% if user.is_authenticated %}
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+                    {% endif %}
                     <a class="navbar-brand" href="{% url 'home' %}">Condomínio Atual</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class=""><a href="{% url 'olimpo:painel' %}">Painel</a></li>
-                        <li class=""><a href="{% url 'olimpo:ocorrencias' %}">Ocorrências</a></li>
-                        <li class="active"><a href="{% url 'olimpo:eventos' %}">Eventos</a></li>
+                        {% if user.is_authenticated %}
                         <li class=""><a href="{% url 'olimpo:logout' %}">Sair</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -46,12 +47,15 @@
         <!-- Fim da Barra de Navegação -->
 
         <div class="container">
-            <div class="formulario">
-                <iframe src="https://docs.google.com/forms/d/12Jw2Ugf8AjSR2QuhS-_UF906atKAVrkCLQc1JObUL6M/viewform?usp=send_form?embedded=true"
-                width="100%" height="950" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-            </div>
-            <hr>
-        </div> <!-- Fim do container principal-->
+            <form class="form-signin" action="{% url 'olimpo:login' %}" method="post" id="login-form">{% csrf_token %}
+                <h3 class="form-signin-heading">{{ message }}</h3>
+                <label for="id_username" class="sr-only">Nome de usuário</label>
+                <input type="text" name="username" id="id_username" class="form-control" placeholder="Nome de usuário" required autofocus>
+                <label for="id_password" class="sr-only">Senha</label>
+                <input type="password" name="password" id="id_password" class="form-control" placeholder="Senha" required>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+          </form>
+        </div>
 
         <footer>
             <div class="container-fluid">
