--- a/catual/olimpo/templates/olimpo/ocorrencias.html
+++ b/catual/olimpo/templates/olimpo/ocorrencias.html
@@ -20,49 +20,52 @@
         <![endif]-->
     </head>
     <body>
-
-    <!-- Início da Barra de Navegação -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{% url 'home' %}">Condomínio Atual</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class=""><a href="{% url 'olimpo:painel' %}">Painel</a></li>
-                    <li class="active"><a href="{% url 'olimpo:ocorrencias' %}">Ocorrências</a></li>
-                    <li class=""><a href="{% url 'olimpo:eventos' %}">Eventos</a></li>
-                    <li class=""><a href="{% url 'olimpo:logout' %}">Sair</a></li>
-                </ul>
+        <!-- Início da Barra de Navegação -->
+        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{% url 'home' %}">Condomínio Atual</a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class=""><a href="{% url 'olimpo:painel' %}">Painel</a></li>
+                        <li class="active"><a href="{% url 'olimpo:ocorrencias' %}">Ocorrências</a></li>
+                        <li class=""><a href="{% url 'olimpo:eventos' %}">Eventos</a></li>
+                        <li class=""><a href="{% url 'olimpo:logout' %}">Sair</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- Fim da Barra de Navegação -->
+        <!-- Fim da Barra de Navegação -->
+
+        <div class="container">
+            <div class="formulario">
+                <iframe src="https://docs.google.com/forms/d/1e_fXx0AR_U2KGstuHDysnIql4fhmFsXujnJOw1lwA2Q/viewform?embedded=true"
+                width="100%" height="820" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            </div>
+            <hr>
+        </div>
+
+        <footer>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>&copy; 2016 - Condomínio Atual.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
 
-<div class="container">
-    <div class="formulario">
-        <iframe src="https://docs.google.com/forms/d/1e_fXx0AR_U2KGstuHDysnIql4fhmFsXujnJOw1lwA2Q/viewform?embedded=true"
-        width="100%" height="820" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-    </div>
-    <hr>
-
-    <footer>
-        <p>&copy; 2016 - Marcus Gabaldo.</p>
-    </footer>
-
-</div> <!-- Fim do container principal-->
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </body>
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    </body>
 </html>
